# what-about-the-size

./: .gitignore  Makefile  README.md  pyproject.toml
wats/: builder.py  cli.py  files.py
wats/renders/: __init__.py  plain.py  tree_render.py  utils.py
wats/script/: wats.py
