[tool.poetry]
name = "what-about-the-size"
version = "0.1.1"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
packages = [
	{ include = "wats" },
]
repository = "https://github.com/mnogom/what-about-the-size"
classifiers = [
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
wats = "wats.script.wats:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
